tests/paczka1/fuzzy1/58848777.err
Error in line 2: NZKmVqMZ A955 62,3
Error in line 1: zYXIzGWq A984 13,3
Error in line 27: S929 A984 34,0
